# local-viewer

./: .dockerignore  .env.example  .gitignore  .oxlintrc.json  CLAUDE.md  Dockerfile  Dockerfile.python  Dockerfile.rust  LICENSE  README.md  docker-compose.yml  init.ps1  init.sh  manage_mounts.py  manage_mounts.sh  package-lock.json  package.json  pyproject.toml  start-win.sh  start.ps1  start.sh
.claude/agents/plan-reviewer/: AGENT.md
.claude/rules/: 00_base.md  01_project_overview.md  02_architecture.md  03_tech_stack.md  04_coding_principles.md  05_design_settings.md  06_git_rules.md  07_testing.md  08_comment_driven.md  09_security.md  10_e2e_testing.md  11_e2e_performance_debug.md  12_planning.md  backend-fastapi.md  backend-rust.md  frontend-react.md
.claude/scripts/: codex-review-cleanup.sh
.claude/skills/codex-review/: SKILL.md
.claude/skills/plan-context-injector/: SKILL.md
.claude/skills/viewer-design-system/: SKILL.md
.github/workflows/: ci.yml
backend/: Cargo.toml  clippy.toml  config.py  errors.py  main.py  requirements-dev.txt  requirements.txt
backend/.cargo/: config.toml
backend/routers/: browse.py  file.py  mounts.py  search.py  thumbnail.py
backend/services/: archive_reader.py  archive_security.py  archive_service.py  browse_cursor.py  dir_index.py  extensions.py  file_watcher.py  indexer.py  mount_config.py  natural_sort.py  node_registry.py  parallel_walk.py  path_security.py  temp_file_cache.py  thumbnail_service.py  thumbnail_warmer.py  video_converter.py
backend/src/: config.rs  errors.rs  main.rs  state.rs
backend/src/bootstrap/: api_router.rs  background_tasks.rs  http_layers.rs  mod.rs  state.rs  static_files.rs
backend/src/middleware/: mod.rs  skip_gzip_binary.rs
backend/src/routers/: browse.rs  file.rs  mod.rs  mounts.rs  search.rs  thumbnail.rs
backend/src/routers/browse/: archive.rs  fast_path.rs  first_viewable.rs  mod.rs  pagination.rs  sibling.rs  tests.rs
backend/src/routers/file/: archive_entry.rs  mod.rs  regular.rs  tests.rs
backend/src/routers/mounts/: list.rs  mod.rs  reload.rs
backend/src/routers/search/: handler.rs  mod.rs  rebuild.rs
backend/src/routers/thumbnail/: batch.rs  mod.rs
backend/src/services/: browse_cursor.rs  dir_index.rs  extensions.rs  file_watcher.rs  indexer.rs  mod.rs  models.rs  mount_cleanup.rs  mount_config.rs  mount_hot_reload.rs  natural_sort.rs  node_registry.rs  parallel_walk.rs  path_keys.rs  path_security.rs  rebuild_guard.rs  rebuild_task.rs  scan_diagnostics.rs  temp_file_cache.rs  thumbnail_inflight.rs  thumbnail_service.rs  thumbnail_warmer.rs  video_converter.rs
backend/src/services/archive/: mod.rs  rar_reader.rs  reader.rs  security.rs  sevenz_reader.rs  zip_reader.rs
backend/src/services/browse_cursor/: codec.rs  mod.rs  pagination.rs  sorting.rs
backend/src/services/dir_index/: bulk_insert.rs  dirty_state.rs  mod.rs  queries.rs  schema.rs  sort_queries.rs  tests.rs  writes.rs
backend/src/services/dir_index/tests/: bulk_insert.rs  common.rs  mod.rs  queries.rs  reader.rs  schema.rs  sort_queries.rs  writes.rs
backend/src/services/file_watcher/: events.rs  filter.rs  mod.rs  path_utils.rs  tests.rs  worker.rs
backend/src/services/indexer/: helpers.rs  mod.rs  perf_bench.rs  scan.rs  tests.rs
backend/src/services/node_registry/: directory.rs  mod.rs  populate.rs  scan.rs  tests.rs
backend/src/services/search/: mod.rs  rebuild_rate_limiter.rs  resolver.rs  scope.rs
backend/src/services/security/: cursor_hmac.rs  mod.rs
e2e/: global-setup.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: generate-fixtures.ts  generate-mounts.ts
e2e/tests/: archive.test.ts  back-vs-close.test.ts  boundary-toast.test.ts  breadcrumb.test.ts  cg-interaction.test.ts  cg-scroll.test.ts  cg-toolbar.test.ts  cg-viewer.test.ts  directory-tree.test.ts  error.test.ts  first-viewable.test.ts  history-stack.test.ts  infinite-scroll.test.ts  keyboard.test.ts  manga-controls.test.ts  manga-viewer.test.ts  mode-toggle.test.ts  navigation.test.ts  open-viewer-return.test.ts  page-slider.test.ts  pdf-navigation.test.ts  pdf.test.ts  search-advanced.test.ts  search.test.ts  set-jump-buttons.test.ts  set-jump.test.ts  smoke.test.ts  thumbnail-sidebar.test.ts  toolbar-auto-hide.test.ts  url-deep-link.test.ts  url-ssot.test.ts  video.test.ts  viewer-image-order.test.ts
e2e/tests/helpers/: navigation.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Breadcrumb.tsx  BrowseHeader.tsx  CgToolbar.tsx  (+34 more)
frontend/tests/: App.test.tsx  setup.ts
py_backend/: errors.py  main.py  requirements.txt
py_backend/routers/: browse.py  file.py  mounts.py  search.py  thumbnail.py
py_backend/services/: archive_reader.py  archive_security.py  archive_service.py  browse_cursor.py  dir_index.py  extensions.py  file_watcher.py  indexer.py  mount_config.py  node_registry.py  path_security.py  temp_file_cache.py  thumbnail_service.py  thumbnail_warmer.py  video_converter.py
rust-backend/: deny.toml
rust-backend/.cargo/: config.toml
rust-backend/src/: config.rs  main.rs  state.rs
scripts/: Convert-MountPath.ps1  Test-MountPath.ps1  convert-mount-path.sh  mount-path-cases.tsv  mount-path-invalid-cases.tsv  test-mount-path.sh
tests/: conftest.py  test_archive_batch.py  test_archive_reader.py  test_archive_security.py  test_archive_security_regression.py  test_archive_service.py  test_browse.py  test_browse_cursor.py  test_browse_first_viewable.py  test_browse_pagination.py  test_browse_sibling.py  test_dir_index.py  test_file.py  test_file_watcher.py  test_gzip_middleware.py  test_health.py  test_indexer.py  test_manage_mounts.py  test_mount_config.py  test_mounts_api.py  test_natural_sort.py  test_node_registry.py  test_parallel_walk.py  test_path_security.py  test_search.py  test_temp_file_cache.py  test_thumbnail.py  test_thumbnail_batch.py  test_thumbnail_service.py  test_thumbnail_warmer.py  test_video_converter.py
(+164 files in other folders)
