[package]
name = "local-viewer-backend"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Local Content Viewer - Rust backend"

[[bin]]
name = "local-viewer-backend"
path = "src/main.rs"

[dependencies]
# Web フレームワーク
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = [
    "net",
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
    "io-util",
    "signal",
    "fs",
] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "cors",
    "compression-gzip",
    "fs",
    "trace",
    "set-header",
] }
hyper = "1"

# シリアライズ
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite — bundled: FTS5 trigram トークナイザを含む (libsqlite3-sys が無条件で有効化)
rusqlite = { version = "0.39", features = ["bundled"] }

# 暗号 (HMAC-SHA256, MD5 ETag)
hmac = "0.13"
sha2 = "0.11"
md-5 = "0.11"
hex = "0.4"
base64 = "0.22"

# アーカイブ
zip = { version = "8", default-features = false, features = ["deflate"] }

# 画像処理 (サムネイル)
# image: JPEG/PNG/GIF/WebP/BMP デコード (AVIF デコードは avif-native feature で別途対応可)
# fast_image_resize: AVX2 SIMD 高速リサイズ (libvips より 35% 速い)
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "gif",
    "webp",
    "bmp",
] }
fast_image_resize = "6"

# ファイル監視 (v8: symlink follow 設定可能)
notify = "8"

# 並列処理
rayon = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# ログ
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# エラーハンドリング
thiserror = "2"
anyhow = "1"

# キャッシュ (W-TinyLFU、バイトベース制限、sync のみ使用)
moka = { version = "0.12", features = ["sync"] }

# ユーティリティ
regex = "1"
mime_guess = "2"
mime = "0.3"
tempfile = "3"
walkdir = "2"
bytes = "1"
tokio-util = { version = "0.7", features = ["io", "rt"] }

[dev-dependencies]
rstest = "0.26"
insta = { version = "1", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full", "test-util"] }

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[lints.clippy]
# pedantic グループ (priority -1 で個別 allow を優先)
# nursery は redundant_pub_crate / missing_const_for_fn 等が既存構造と
# 大量に衝突するため有効化しない
pedantic = { level = "warn", priority = -1 }

# pedantic から除外 (false positive が多い / プロジェクト方針に合わない)
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
items_after_statements = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

# restriction から cherry-pick (本番コードに残すべきでないもの)
# panic / mem_forget / unwrap_in_result はテスト用シミュレーションや
# NODE_SECRET 必須化など意図的使用があるため有効化しない
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"
exit = "deny"
unwrap_used = "warn"
expect_used = "warn"
lossy_float_literal = "warn"
allow_attributes_without_reason = "warn"
clone_on_ref_ptr = "warn"
rest_pat_in_fully_bound_structs = "warn"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
split-debuginfo = "unpacked"

[profile.dev]
# 開発中は依存クレートを最適化 (ビルド速度と実行速度のバランス)
[profile.dev.package."*"]
opt-level = 1
